# VroomTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Content/: CMakeLists.txt
Content/Resources/Scenes/: DefaultScene.json
Content/Scripts/: CMakeLists.txt
Content/Scripts/include/Scripts/: MyScript.h
Content/Scripts/src/: MyScript.cpp
